# script-language-benchmark

./: README.md  angelscript_report_gpt5.md  benchmark_report.md  benchmark_run1_report.md  benchmark_run2_report.md  benchmark_run3_report.md  comparison_items.md
AngelScript/: CMakeLists.txt
AngelScript/angelscript-2.38.0/: README.md
AngelScript/angelscript-2.38.0/sdk/tests/test_feature/projects/msvc2022/: as_test.vcxproj  as_test.vcxproj.filters
AngelScript/results/: angelscript_results.json
AngelScript/scripts/: bench.as
AngelScript/src/: main.cpp
Daslang/: CMakeLists.txt
Daslang/results/: daslang_results.json
Daslang/scripts/: bench.das
Daslang/src/: main.cpp
Lua/: CMakeLists.txt
Lua/results/: lua_results.json
Lua/scripts/: bench.lua
Lua/src/: main.cpp
bench_runs/run1/: angelscript_results.json  daslang_results.json  lua_results.json
bench_runs/run2/: angelscript_results.json  daslang_results.json  lua_results.json
bench_runs/run3/: angelscript_results.json  daslang_results.json  lua_results.json
common/: benchmark_common.h  benchmark_workloads.h
